style: fix blurred topbar position

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -206,10 +206,10 @@ dialog h4 {
   display: flex;
   flex-direction: column;
   gap: 7px;
-  padding: 20px 40px;
+  padding: 20px 40px 20px 50px;
   position: fixed;
   top: 0;
-  left: 380px;
+  left: 370px;
   right: 0;
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.2);
@@ -219,7 +219,7 @@ dialog h4 {
 .filter::before {
   position: absolute;
   bottom: 0;
-  left: 15px;
+  left: 25px;
   right: 15px;
   height: min-content;
   border-bottom: 0.5px solid rgba(100, 116, 139, 0.5); /* slate-500/50 */
@@ -229,7 +229,7 @@ dialog h4 {
 .filter::after {
   position: absolute;
   bottom: 0;
-  left: 15px;
+  left: 25px;
   right: 15px;
   height: 2px;
   background-color: #0f172a; /* slate-950 */
@@ -634,9 +634,10 @@ dialog input {
   }
 
   .filter {
-    top: -300px;
-    left: 55px;
+    top: -315px;
+    left: 45px;
     padding-bottom: 10px;
+    padding-top: 35px;
   }
 
   .filter > form {
